# code

./: .gitignore  Cargo.toml  PERFORMANCE_OPTIMIZATION_SUMMARY.md  README.md  SECURITY_CLEARANCE_CERTIFICATE.md  claude-auth-plan.md  claude_auth.md  implementation-status.md  publish-beta-package.json  test_claude_auth.rs
config/: claude_code_agent_profiles.toml
docs/: SECURITY_IMPLEMENTATION_REPORT.md  authentication.md  claude-auth-adr.md  claude-auth-api-reference.md  claude-auth-configuration.md  claude-auth-documentation-index.md  claude-auth-implementation-summary.md  claude-auth-integration-architecture.md  claude-auth-integration-plan.md  claude-auth-integration.md  claude-auth-migration-guide.md  claude-auth-oauth-migration.md  claude-auth-quota-management.md  claude-auth-setup-guide.md  claude-auth-troubleshooting.md  claude-cli-interface-fixes.md  claude-code-agent-configuration-guide.md  claude-code-architecture-analysis.md  claude-max-quickstart.md  claude-max-setup-guide.md  cli_commands_reference.md  configuration-management.md  conflict-resolution-summary.md  error_conversion_patterns.md  feat-claude-auth-merge-summary.md  hive-research-findings.md  hive-security-analysis.md  hive-test-results.md  integration_validation_report.md  npm-publishing-guide.md  publishing-strategy.md  (+3 more)
tests/: Cargo.toml  INTEGRATION_TEST_REPORT.md  README.md  claude_auth_integration_test_report.json  claude_auth_integration_tests.rs  claude_auth_performance_tests.rs  claude_auth_security_assessment.rs  claude_auth_security_tests.rs  claude_auth_test_plan.md  claude_cli_integration_tests.rs  claude_code_functional_validation.rs  claude_code_functionality_tests.rs  claude_code_readiness_report.md  claude_multi_agent_integration_tests.rs  claude_performance_benchmarks.rs  claude_provider_comprehensive_tests.rs  claude_provider_functionality_validation.sh  claude_provider_unit_tests.rs  cli_integration_test.rs  final_security_clearance_report.rs  integration_test_runner_focused.rs  integration_tests.rs  integration_validation_tests.rs  manual_claude_provider_test.sh  performance_integration_test.rs  production_validation_suite.rs  runnable_integration_tests.rs  security_audit_report.md  security_integration_tests.rs  security_performance_validation.rs  standalone_integration_test.rs  test_runner.rs  validation_test_runner.rs
tests/common/: claude_test_utils.rs
(+61 files in other folders)
