[package]
name = "claude-code-security"
version = "0.1.0"
edition = "2021"
description = "Comprehensive security implementation for Claude authentication integration"
authors = ["Claude Code Security Team"]
license = "MIT"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
base64 = "0.22"
rand = "0.9"

# Cryptography
sha2 = "0.10"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# File system and paths
dirs = "6"

# URL handling
url = "2.0"
urlencoding = "2.1"

# Lazy static for global instances
lazy_static = "1.5"
once_cell = "1.0"

# Additional dependencies for provider system
tokio-stream = "0.1"
async-trait = "0.1"
which = "4.4"
toml_edit = "0.23.5"
regex = "1.11.2"
uuid = { version = "1.18.1", features = ["v4"] }
tracing = "0.1.41"
toml = "0.9.6"

# CLI dependencies
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"

# Test dependencies (moved from dev-dependencies for binary access)
tempfile = "3.0"

# Development dependencies
[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "claude_code_security"
path = "src/lib.rs"

[features]
default = ["full-security"]
full-security = []
minimal-security = []

[[example]]
name = "security_demo"
path = "examples/security_demo.rs"

# Integration test binary
[[bin]]
name = "integration_test_runner"
path = "tests/test_runner.rs"

# Individual test binaries for the critical tests
[[bin]]
name = "test_critical"
path = "tests/integration_tests.rs"

[[bin]]
name = "integration_test_runner_focused"
path = "tests/integration_test_runner_focused.rs"

[[bin]]
name = "claude_code_functional_validation"
path = "tests/claude_code_functional_validation.rs"

# Authentication CLI tool (commented out - needs integration work)
# [[bin]]
# name = "auth_cli"
# path = "src/bin/auth_cli.rs"
