[package]
name = "claude-integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.0"

[[bin]]
name = "integration_test"
path = "standalone_integration_test.rs"